# PlexMCP-OSS

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  BRAND.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  KNOWN_ISSUES.md  LICENSE  LICENSE-MIT  OSS_SCOPE.md  README.md  SECURITY.md  SELF_HOSTING.md  TESTING_GUIDE.md  cliff.toml  clippy.toml  docker-bake.hcl  docker-compose.yml
.coderabbit/: README.md
.embeddings/: MCP_SETUP.md  PHASE1_REVIEW.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  README.md  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml  pull_request_template.md
.sqlx/: query-05c165699abcd3846fdd0b2c996c89d935bcaf91d241a865091dce881b9fe8f2.json  query-0f5cc26fec4df217c2e5e494fb1c0b0adc770ab2f70bdc22724413804d6d6ada.json  query-1075bee93516a0d7310189f83750870c208f33dae21b6b041309eb07f50b8b78.json  query-1645aa92bbde02f97fce13a2a7a231a0fc3769652e276814d5fc0270cf935e07.json  query-1a1786037bb93a4ff521f68c3191ba04c5fbd6456704dd6b1fcd792d5742931d.json  (+17 more)
crates/billing/: Cargo.toml
crates/billing/src/: addons.rs  checkout.rs  client.rs  customer.rs  edge_case_tests.rs  email.rs  entitlement.rs  error.rs  events.rs  history.rs  instant_charge.rs  invariants.rs  lib.rs  member_suspension.rs  metered.rs  overage.rs  portal.rs  rate_limit.rs  refund.rs  spend_cap.rs  subscriptions.rs  tax.rs  usage.rs  webhooks.rs
crates/billing/tests/integration/: admin_tier_changes.rs
crates/shared/: Cargo.toml
crates/shared/src/: db.rs  error.rs  lib.rs  rate_limit.rs  types.rs
(+420 files in other folders)
